<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_group_move">

        <EditTextPreference
            app:key="setting_walk"
            app:title="@string/setting_walk" 
            app:defaultValue="@string/setting_walk_default"
            app:summary="@string/setting_walk_default"/>

        <EditTextPreference
            app:key="setting_run"
            app:title="@string/setting_run"
            app:defaultValue="@string/setting_run_default"
            app:summary="@string/setting_run_default"/>

        <EditTextPreference
            app:key="setting_bike"
            app:title="@string/setting_bike"
            app:defaultValue="@string/setting_bike_default"
            app:summary="@string/setting_bike_default"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_group_log">

        <EditTextPreference
            app:key="setting_log_off"
            app:title="@string/setting_log_off" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_group_about">

        <Preference
            app:key="setting_version"
            app:title="@string/setting_version"/>

        <Preference
            app:key="setting_author"
            app:title="@string/setting_author"
            app:defaultValue="s"/>

    </PreferenceCategory>

</PreferenceScreen>