<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="3dp"
            android:text="@string/register_title"
            android:textColor="#282828"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="longitude"
            android:hint="@string/register_user_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/reg_device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:textColor="#282828"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/reg_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:textColor="#282828"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reg_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="longitude"
            android:hint="@string/register_response"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/reg_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register_check" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/register_cancel"
                android:textColor="#282828"
                android:textStyle="bold" />

            <Space
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/reg_agree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/register_ok"
                android:textColor="#282828"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>