<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update_title"
        android:textColor="#282828"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/update_time" />
        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="" />
        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/update_commit" />
        <TextView
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/update_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="16sp"
            android:text="" />
    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_gray"
        android:layout_height="350dp">

        <TextView
            android:id="@+id/update_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:lineSpacingMultiplier="1.2"
            android:textColor="#282828"
            android:textSize="15sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update_ignore"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/update_ignore"/>

        <Space
            android:layout_width="60dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/update_agree"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/update_download"/>
    </LinearLayout>
</LinearLayout>
