<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/app_privacy"
        android:textColor="#282828"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="360dp">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:textColor="#282828"
            android:textSize="15sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tv_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_disagree"/>

        <Space
            android:layout_width="60dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/tv_agree"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/app_btn_agree"/>
    </LinearLayout>
</LinearLayout>
