<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:focusable="true"/>

        <RadioGroup
            android:id="@+id/RadioGroupMapType"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="4dip"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/map_pic_normal" />

            <RadioButton
                android:id="@+id/statellite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/map_pic_sate" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/pos_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:onClick="goCurrentPosition"
            android:theme="@style/AppTheme"
            app:srcCompat="@drawable/ic_home_position"
            app:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/zoom_in"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="383dp"
            android:onClick="zoomInMap"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:theme="@style/AppTheme"
            app:srcCompat="@drawable/ic_zoom_in"
            android:contentDescription="@null"
            app:tint="@color/colorAccent"/>

        <ImageButton
            android:id="@+id/zoom_out"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="416dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:onClick="zoomOutMap"
            android:theme="@style/AppTheme"
            app:srcCompat="@drawable/ic_zoom_out"
            app:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/input"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:onClick="goInputPosition"
            android:theme="@style/AppTheme"
            app:srcCompat="@drawable/ic_input"
            app:tint="@color/colorAccent" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="10sp"
            android:text="@string/app_statement"
            tools:ignore="SmallSp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>